--- a/sobreDiscord.html
+++ b/sobreDiscord.html
@@ -15,7 +15,7 @@
           compartilhamento de tela e bots para automação e moderação. A flexibilidade e a capacidade de personalização do Discord o tornam uma <br>
           ferramenta popular para colaboração e socialização online. </p>
           <p>quer se tornar um usuario? clique <a href="https://discord.com/" target="_blank">aqui</a></p>
-    <a href="homemaioridade.html" target="_self">
+    <a href="homema.html" target="_self">
         <img src="imagens/voltar.png">
     </a>
     <style>
