--- a/sobreGit.html
+++ b/sobreGit.html
@@ -14,7 +14,7 @@
                o GitHub suporta integração contínua e ferramentas de automação, tornando-se uma peça chave no desenvolvimento moderno.<br>
                É amplamente utilizado por desenvolvedores individuais e empresas para projetos de código aberto e privado.</p> <br> 
                <p>Clique <a href="https://github.com/" target="_blank">Aqui</a> e faça parte da comunidade</p>
-               <a href="homemaioridade.html" target="_self">
+               <a href="home.html" target="_self">
                 <img src="imagens/voltar.png">
                </a>
     <style>
