--- a/sobreTelegram.html
+++ b/sobreTelegram.html
@@ -16,7 +16,7 @@
            compartilhar conteúdo em várias plataformas. Sua interface é intuitiva e permite a sincronização entre dispositivos, o que o torna uma <br>
            ferramenta popular para comunicação pessoal e profissional.</p>
            <p>Clique <a href="https://web.telegram.org/" target="_blank">aqui</a> e faça parte</p>
-    <a href="homemaioridade.html" target="_self">
+    <a href="home.html" target="_self">
         <img src="imagens/voltar.png">
     </a>
     <style>
